name: hmsguid
version: 1.0
license: BSD3
homepage:	https://github.com/dvigal/hmsguid
build-type: Simple
cabal-version: >=1.6

Library
    build-depends: base >= 3 && < 5, Win32 >= 2.2.2.0
    ghc-options: -Wall -fno-warn-name-shadowing
    cc-options: -fno-strict-aliasing
    exposed-modules:
        Guid
    extensions: ForeignFunctionInterface, CPP	